--- a/src/Dotnet9.BlazorWeb/Shared/HeaderPartial.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/HeaderPartial.razor
@@ -10,6 +10,9 @@
             <a href="/tools" title="工具箱">工具箱</a>
         </span>
         <span class="header-menu">
+            <a href="/games" title="小游戏">小游戏</a>
+        </span>
+        <span class="header-menu">
             <a href="/tags" title="标签云">标签云</a>
         </span>
         <span class="header-menu">
