add minesweeper game;

--- a/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
+++ b/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
@@ -98,7 +98,8 @@
 
 <div id="reconnect-modal" style="display: none;"></div>
 <script src="_framework/blazor.server.js" autostart="false"></script>
-    <script src="~/js/boot.js"></script>
+<script src="~/js/boot.js"></script>
+<script src="~/js/minesweeper.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 
 <environment names="Production">
