--- a/src/Dotnet9.BlazorWeb/Pages/Games/GuessingNumbers.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Games/GuessingNumbers.razor
@@ -2,7 +2,9 @@
 
 <PageTitle>@_title</PageTitle>
 
+
 <MApp>
+    <OpenOtherWebsite UrlSuffix="/games/guessing-numbers" />
     <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
 
     @if (_isGameOver)
