--- a/src/Dotnet9.BlazorWeb/Pages/Tools/CountDown.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/CountDown.razor
@@ -3,6 +3,7 @@
 <PageTitle>@Title</PageTitle>
 
 <MApp>
+    <OpenOtherWebsite UrlSuffix="/tools/countdown" />
     <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@Title</h2>
 
     <p>
