--- a/src/Dotnet9.BlazorWeb/Pages/Tools/JsonFormatter.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/JsonFormatter.razor
@@ -4,6 +4,7 @@
 <PageTitle>@_title</PageTitle>
 
 <MApp>
+    <OpenOtherWebsite UrlSuffix="/tools/jsonformatter" />
     <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
 
     <div>
