--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -33,3 +33,4 @@
 @using Markdig
 @using Dotnet9.WebShare.Helpers
 @using Dotnet9.ASPNETCore
+@using Dotnet9.BlazorWeb.Pages.Games.Models.Minesweeper
