--- a/src/Dotnet9.BlazorWeb/Pages/Games/Tictactoe.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Games/Tictactoe.razor
@@ -3,6 +3,7 @@
 <PageTitle>@_title</PageTitle>
 
 <MApp>
+    <OpenOtherWebsite UrlSuffix="/games/tictactoe" />
     <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
 
     @if (_isGameOver)
