--- a/src/Dotnet9.BlazorWeb/Pages/Tools/Index.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/Index.razor
@@ -3,34 +3,38 @@
 
 <PageTitle>工具箱</PageTitle>
 
-@if (_items is not {Count: > 0 })
-{
-    <div class="read_more">
-        这里空空如也
-    </div>
-}
-else
-{
-    <div class="blog_list">
-        <ul>
-            @foreach (var toolItem in _items)
-            {
-                <li>
-                    <a href="@toolItem.Url" class="blog_more">
-                        <h2>@toolItem.Name</h2>
-                        <i>
-                            <img src="@toolItem.Cover" alt="@toolItem.Name" title="@toolItem.Name"/>
-                        </i>
-                        <p title="@toolItem.Description">@toolItem.Description</p>
-                    </a>
-                    <div class="info">
-                        <span class="info_view">@toolItem.ViewCount</span>
-                    </div>
-                </li>
-            }
-        </ul>
-    </div>
-}
+<MApp>
+    <OpenOtherWebsite UrlSuffix="/tools" />
+
+    @if (_items is not {Count: > 0 })
+    {
+        <div class="read_more">
+            这里空空如也
+        </div>
+    }
+    else
+    {
+        <div class="blog_list">
+            <ul>
+                @foreach (var toolItem in _items)
+                {
+                    <li>
+                        <a href="@toolItem.Url" class="blog_more">
+                            <h2>@toolItem.Name</h2>
+                            <i>
+                                <img src="@toolItem.Cover" alt="@toolItem.Name" title="@toolItem.Name"/>
+                            </i>
+                            <p title="@toolItem.Description">@toolItem.Description</p>
+                        </a>
+                        <div class="info">
+                            <span class="info_view">@toolItem.ViewCount</span>
+                        </div>
+                    </li>
+                }
+            </ul>
+        </div>
+    }
+</MApp>
 
 @code
 {
