--- a/src/Dotnet9.BlazorWeb/Shared/OpenOtherWebsite.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/OpenOtherWebsite.razor
@@ -1,7 +1,7 @@
 ﻿@inject NavigationManager NavigationManager
 
 <MSystemBar Dark Color="orange lighten-2">
-    <MButton Depressed Color="primary" OnClick="OpenUrl">
+     <MButton Depressed Color="primary" OnClick="OpenUrl" Class="custom-transform-class text-none">
         @Content
     </MButton>
 </MSystemBar>
