add share project;

--- a/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
+++ b/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
@@ -24,8 +24,10 @@
     <script src="/js/comm.js"></script>
     <!-- Swiper JS -->
     <script src="/js/swiper.min.js"></script>
-    <base href="~/"/>
+    <base href="~/" />
+    @* <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet" /> *@
     <link href="css/app.css" rel="stylesheet"/>
+    <link href="css/games.css" rel="stylesheet"/>
     <link href="Dotnet9.BlazorWeb.styles.css" rel="stylesheet"/>
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/@("@mdi")/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
@@ -100,6 +102,7 @@
 <script src="_framework/blazor.server.js" autostart="false"></script>
 <script src="~/js/boot.js"></script>
 <script src="~/js/minesweeper.js"></script>
+<script src="~/js/utilities.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 
 <environment names="Production">
