--- a/src/Dotnetools.Web/Pages/Tools/CountDownPage.razor
+++ b/src/Dotnetools.Web/Pages/Tools/CountDownPage.razor
@@ -14,5 +14,5 @@
 
 @code
 {
-    private readonly string? _title = $"工具箱-{ToolKind.CountDown.ToolItem()?.Name}-Dotnet工具箱";
+    private readonly string? _title = $"在线工具-{ToolKind.CountDown.ToolItem()?.Name}-Dotnet工具箱";
 }
