--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -33,4 +33,9 @@
 @using Markdig
 @using Dotnet9.WebShare.Helpers
 @using Dotnet9.ASPNETCore
-@using Dotnet9.BlazorWeb.Pages.Games.Models.Minesweeper
+@using Dotnetools.Share.Models.Games
+@using Dotnetools.Share.Models.Tools
+@using Dotnetools.Share.Datas
+@using Dotnetools.Share.Components.Tools
+@using Dotnetools.Share.Components.Shared
+@using Dotnetools.Share.Components.Games
