--- a/src/Dotnetools.Web/Pages/Tools/TimestampPage.razor
+++ b/src/Dotnetools.Web/Pages/Tools/TimestampPage.razor
@@ -14,6 +14,5 @@
 
 @code
 {
-
-    private readonly string? _title = $"工具箱-{ToolKind.Timestamp.ToolItem()?.Name}-Dotnet工具箱";
+    private readonly string? _title = $"在线工具-{ToolKind.Timestamp.ToolItem()?.Name}-Dotnet工具箱";
 }
