fix tetris load exception;

--- a/src/Dotnetools.Share/_Imports.razor
+++ b/src/Dotnetools.Share/_Imports.razor
@@ -10,3 +10,4 @@
 @using Dotnetools.Share.Models.Games.Tetris.Tetrominos
 @using Dotnetools.Share.Models.Tools
 @using Microsoft.AspNetCore.Components.Routing
+@using Dotnetools.Share.Components.Partials
