--- a/src/Dotnet9.BlazorWeb/Pages/Games/Index.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Games/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/games"
 @inject ISystemClientService SystemClientService
 
-<PageTitle>游戏</PageTitle>
+<PageTitle>在线游戏</PageTitle>
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/games"/>
