--- a/src/Dotnet9.BlazorWeb/Pages/Games/MinesweeperPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Games/MinesweeperPage.razor
@@ -5,7 +5,7 @@
 <MApp>
     <OpenOtherWebsite UrlSuffix="/games/minesweeper"/>
 
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@GameKind.Minesweeper.GameItem()?.Name</h2>
 
     <Minesweeper/>
 </MApp>
