--- a/src/Dotnet9.BlazorWeb/Pages/Games/TetrisPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Games/TetrisPage.razor
@@ -6,7 +6,7 @@
 <MApp>
     <OpenOtherWebsite UrlSuffix="/games/minesweeper"/>
 
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@GameKind.Tetris.GameItem()?.Name</h2>
 
     <Tetris />
 </MApp>
