--- a/src/Dotnet9.BlazorWeb/Pages/Games/TictactoePage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Games/TictactoePage.razor
@@ -4,7 +4,7 @@
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/games/tictactoe"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@GameKind.Tictactoe.GameItem()?.Name</h2>
 
     <Tictactoe/>
 </MApp>
