--- a/src/Dotnet9.BlazorWeb/Pages/Tools/CountDownPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/CountDownPage.razor
@@ -4,7 +4,7 @@
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/tools/countdown"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.CountDown.ToolItem()?.Name</h2>
 
     <CountDown/>
 </MApp>
