--- a/src/Dotnet9.BlazorWeb/Pages/Tools/Index.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/tools"
 @inject ISystemClientService SystemClientService
 
-<PageTitle>工具箱</PageTitle>
+<PageTitle>在线工具</PageTitle>
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/tools"/>
