--- a/src/Dotnetools.Web/Pages/Games/TetrisPage.razor
+++ b/src/Dotnetools.Web/Pages/Games/TetrisPage.razor
@@ -6,7 +6,7 @@
 <MRow>
     <MCol Class="mt-2"
           Cols="12">
-        <strong style="padding-left: 10px;">@_title</strong>
+        <strong style="padding-left: 10px;">@GameKind.Tetris.GameItem()?.Name</strong>
     </MCol>
 
 </MRow>
