--- a/src/Dotnetools.Web/Pages/Games/TictactoePage.razor
+++ b/src/Dotnetools.Web/Pages/Games/TictactoePage.razor
@@ -5,7 +5,7 @@
 <MRow>
     <MCol Class="mt-2"
           Cols="12">
-        <strong style="padding-left: 10px;">@_title</strong>
+        <strong style="padding-left: 10px;">@GameKind.Tictactoe.GameItem()?.Name</strong>
     </MCol>
 
 </MRow>
