--- a/src/Dotnetools.Web/Shared/FooterPartial.razor
+++ b/src/Dotnetools.Web/Shared/FooterPartial.razor
@@ -13,18 +13,9 @@
              <p>
                  备案号 <a href="https://beian.miit.gov.cn/" target="_blank" rel="nofollow noopener">蜀ICP备19038256号-6</a>
                  &nbsp; | 本站由 .NET 8 强力驱动！
-                 &nbsp; | 本站源代码：<a href="https://github.com/dotnet9/dotnetools" target="_blank">Github</a>
-                 &nbsp; | <a href="https://github.com/dotnet9/dotnetools/issues" target="_blank">Bug反馈</a>
+                 &nbsp; | 本站源代码：<a href="https://github.com/dotnet9/Dotnet9" target="_blank">Github</a>
+                 &nbsp; | <a href="https://github.com/dotnet9/Dotnet9/issues" target="_blank">Bug反馈</a>
             </p>
         </MCardText>
     </MCard>
 </MFooter>
-
-@code
-{
-    private void OpenUrl()
-    {
-        var url = $"https://github.com/dotnet9/dotnetools";
-        NavigationManager.NavigateTo(url, true);
-    }
-}
