--- a/src/Dotnet9.BlazorWeb/Pages/Games/GuessingNumbersPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Games/GuessingNumbersPage.razor
@@ -4,7 +4,7 @@
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/games/guessing-numbers"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@GameKind.GuessingNumbers.GameItem()?.Name</h2>
 
     <GuessingNumbers/>
 </MApp>
