--- a/src/Dotnet9.BlazorWeb/Pages/Tools/JsonFormatterPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/JsonFormatterPage.razor
@@ -4,7 +4,7 @@
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/tools/jsonformatter"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.JsonFormatter.ToolItem()?.Name</h2>
 
     <JsonFormatter/>
 </MApp>
