--- a/src/Dotnet9.BlazorWeb/Pages/Tools/RegexTesterPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/RegexTesterPage.razor
@@ -4,7 +4,7 @@
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/tools/regextester"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.RegexTester.ToolItem()?.Name</h2>
 
     <RegexTester/>
 </MApp>
