--- a/src/Dotnet9.BlazorWeb/Pages/Tools/StringEncoderPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/StringEncoderPage.razor
@@ -4,7 +4,7 @@
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/tools/string-encoder"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.StringEncoder.ToolItem()?.Name</h2>
 
     <StringEncoder/>
 </MApp>
