--- a/src/Dotnet9.BlazorWeb/Pages/Tools/TimestampPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/TimestampPage.razor
@@ -4,7 +4,7 @@
 
 <MApp>
     <OpenOtherWebsite UrlSuffix="/tools/timestamp"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.Timestamp.ToolItem()?.Name</h2>
 
     <Timestamp />
 </MApp>
