--- a/src/Dotnetools.Web/Pages/Tools/RegexTesterPage.razor
+++ b/src/Dotnetools.Web/Pages/Tools/RegexTesterPage.razor
@@ -5,7 +5,7 @@
 <MRow>
     <MCol Class="mt-2"
           Cols="12">
-        <strong style="padding-left: 10px;">@_title</strong>
+        <strong style="padding-left: 10px;">@ToolKind.RegexTester.ToolItem()?.Name</strong>
     </MCol>
 
 </MRow>
