--- a/src/Dotnetools.Web/Shared/SiteInfoSideBar.razor
+++ b/src/Dotnetools.Web/Shared/SiteInfoSideBar.razor
@@ -9,10 +9,10 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://github.com/dotnet9/dotnetools" target="_blank">Github</a>
+                    <a href="https://github.com/dotnet9/Dotnet9" target="_blank">Github</a>
                 </td>
                 <td>
-                    <a href="https://github.com/dotnet9/dotnetools/issues" target="_blank">Bug反馈</a>
+                    <a href="https://github.com/dotnet9/Dotnet9/issues" target="_blank">Bug反馈</a>
                 </td>
             </tr>
         </table>
