--- a/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
+++ b/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
@@ -103,6 +103,7 @@
 <script src="~/js/boot.js"></script>
 <script src="~/js/minesweeper.js"></script>
 <script src="~/js/utilities.js"></script>
+    <script src="~/js/rgb/color_convert.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 
 <environment names="Production">
@@ -115,8 +116,8 @@
                 s.parentNode.insertBefore(hm, s);
             })();
         </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
-            crossorigin="anonymous"></script>
+    @* <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+            crossorigin="anonymous"></script> *@
 </environment>
 </body>
 
