--- a/src/Dotnetools.Share/Components/Games/Tetris.razor
+++ b/src/Dotnetools.Share/Components/Games/Tetris.razor
@@ -1,5 +1,6 @@
 ﻿@inject IJSRuntime _jsRuntime;
 
+<!--游戏源码来源：https://github.com/exceptionnotfound/BlazorGames-->
 
 <div class="tool-body">
     <audio id="theme" src="sounds/tetris-theme.ogg" preload="auto" loop="loop"/>
