--- a/src/Dotnetools.Web/Pages/Games/Index.razor
+++ b/src/Dotnetools.Web/Pages/Games/Index.razor
@@ -12,7 +12,7 @@
     {
         <MCol Cols="6"
               Md="4">
-            <CardItem Title="@item.Name" Memo="@item.Memo" Cover="@item.Cover" Url="@item.Url" />
+            <CardItem Title="@item.Name" Cover="@item.Cover" Url="@item.Url" />
         </MCol>
     }
 </MRow>
