--- a/src/Dotnetools.Web/_Imports.razor
+++ b/src/Dotnetools.Web/_Imports.razor
@@ -15,8 +15,8 @@
 @using Dotnetools.Share.Models.Games.Tetris
 @using Dotnetools.Share.Models.Games.Tetris.Enums
 @using Dotnetools.Share.Models.Games
-@using Dotnetools.Share.Models.Tools
 @using Dotnetools.Share.Components.Games
 @using Dotnetools.Share.Components.Tools
 @using Dotnetools.Share.Components.Shared
 @using Dotnetools.Web.Shared
+@using Dotnetools.Share.Models
