--- a/src/Dotnet9.BlazorWeb/Pages/Tools/CountDownPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/CountDownPage.razor
@@ -1,15 +1,3 @@
 ﻿@page "/tools/countdown"
 
-<PageTitle>@_title</PageTitle>
-
-<MApp>
-    <OpenOtherWebsite UrlSuffix="/tools/countdown"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.CountDown.ToolItem()?.Name</h2>
-
-    <CountDown/>
-</MApp>
-
-@code {
-
-    private readonly string? _title = $"在线工具-{ToolKind.CountDown.ToolItem()?.Name}-Dotnet9";
-}
+<ToolItemPageContent Kind="ToolKind.ToolCountDown" />
