--- a/src/Dotnet9.BlazorWeb/Pages/Tools/JsonFormatterPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/JsonFormatterPage.razor
@@ -1,15 +1,3 @@
 ﻿@page "/tools/jsonformatter"
 
-<PageTitle>@_title</PageTitle>
-
-<MApp>
-    <OpenOtherWebsite UrlSuffix="/tools/jsonformatter"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.JsonFormatter.ToolItem()?.Name</h2>
-
-    <JsonFormatter/>
-</MApp>
-
-@code
-{
-    private readonly string? _title = $"在线工具-{ToolKind.JsonFormatter.ToolItem()?.Name}-Dotnet9";
-}
+<ToolItemPageContent Kind="ToolKind.ToolJsonFormatter" />
