--- a/src/Dotnet9.BlazorWeb/Pages/Tools/StringEncoderPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/StringEncoderPage.razor
@@ -1,14 +1,3 @@
 ﻿@page "/tools/string-encoder"
 
-<PageTitle>@_title</PageTitle>
-
-<MApp>
-    <OpenOtherWebsite UrlSuffix="/tools/string-encoder"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.StringEncoder.ToolItem()?.Name</h2>
-
-    <StringEncoder/>
-</MApp>
-
-@code {
-    private readonly string? _title = $"在线工具-{ToolKind.StringEncoder.ToolItem()?.Name}-Dotnet9";
-}
+<ToolItemPageContent Kind="ToolKind.ToolStringEncoder" />
