--- a/src/Dotnet9.BlazorWeb/Pages/Tools/TimestampPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/TimestampPage.razor
@@ -1,15 +1,3 @@
 ﻿@page "/tools/timestamp"
 
-<PageTitle>@_title</PageTitle>
-
-<MApp>
-    <OpenOtherWebsite UrlSuffix="/tools/timestamp"/>
-    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@ToolKind.Timestamp.ToolItem()?.Name</h2>
-
-    <Timestamp />
-</MApp>
-
-@code
-{
-    private readonly string? _title = $"在线工具-{ToolKind.Timestamp.ToolItem()?.Name}-Dotnet9";
-}
+<ToolItemPageContent Kind="ToolKind.ToolTimestamp" />
