--- a/src/Dotnetools.Web/Pages/Games/GuessingNumbersPage.razor
+++ b/src/Dotnetools.Web/Pages/Games/GuessingNumbersPage.razor
@@ -1,19 +1,3 @@
 ﻿@page "/games/guessing-numbers"
 
-<PageTitle>@_title</PageTitle>
-
-
-<MRow>
-    <MCol Class="mt-2"
-          Cols="12">
-        <strong style="padding-left: 10px;">@GameKind.GuessingNumbers.GameItem()?.Name</strong>
-    </MCol>
-
-</MRow>
-
-<GuessingNumbers/>
-
-@code
-{
-    private readonly string? _title = $"在线游戏-{GameKind.GuessingNumbers.GameItem()?.Name}-Dotnet工具箱";
-}
+<ToolItemPageContent Kind="ToolKind.GameGuessingNumbers"/>
