--- a/src/Dotnetools.Web/Pages/Games/TictactoePage.razor
+++ b/src/Dotnetools.Web/Pages/Games/TictactoePage.razor
@@ -1,18 +1,3 @@
 ﻿@page "/games/tictactoe"
 
-<PageTitle>@_title</PageTitle>
-
-<MRow>
-    <MCol Class="mt-2"
-          Cols="12">
-        <strong style="padding-left: 10px;">@GameKind.Tictactoe.GameItem()?.Name</strong>
-    </MCol>
-
-</MRow>
-
-<Tictactoe/>
-
-@code
-{
-    private readonly string? _title = $"在线游戏-{GameKind.Tictactoe.GameItem()?.Name}-Dotnet工具箱";
-}
+<ToolItemPageContent Kind="ToolKind.GameTictactoe" />
