--- a/src/Dotnetools.Web/Pages/Tools/JsonFormatterPage.razor
+++ b/src/Dotnetools.Web/Pages/Tools/JsonFormatterPage.razor
@@ -1,18 +1,3 @@
 ﻿@page "/tools/jsonformatter"
 
-<PageTitle>@_title</PageTitle>
-
-<MRow>
-    <MCol Class="mt-2"
-          Cols="12">
-        <strong style="padding-left: 10px;">@ToolKind.JsonFormatter.ToolItem()?.Name</strong>
-    </MCol>
-
-</MRow>
-
-<JsonFormatter />
-
-@code
-{
-    private readonly string? _title = $"在线工具-{ToolKind.JsonFormatter.ToolItem()?.Name}-Dotnet工具箱";
-}
+<ToolItemPageContent Kind="ToolKind.ToolJsonFormatter" />
