--- a/src/Dotnetools.Web/Pages/Tools/RegexTesterPage.razor
+++ b/src/Dotnetools.Web/Pages/Tools/RegexTesterPage.razor
@@ -1,18 +1,3 @@
 ﻿@page "/tools/regextester"
 
-<PageTitle>@_title</PageTitle>
-
-<MRow>
-    <MCol Class="mt-2"
-          Cols="12">
-        <strong style="padding-left: 10px;">@ToolKind.RegexTester.ToolItem()?.Name</strong>
-    </MCol>
-
-</MRow>
-
-<RegexTester />
-
-@code
-{
-    private readonly string? _title = $"在线工具-{ToolKind.RegexTester.ToolItem()?.Name}-Dotnet工具箱";
-}
+<ToolItemPageContent Kind="ToolKind.ToolRegexTester" />
