--- a/src/Dotnetools.Web/Shared/RecommendedGamesSideBar.razor
+++ b/src/Dotnetools.Web/Shared/RecommendedGamesSideBar.razor
@@ -24,7 +24,7 @@
 {
     readonly ToolItem[] _items = new[]
     {
-        ToolKind.GameTetris.GameItem()!,
-        ToolKind.GameMinesweeper.GameItem()!
+        ToolKind.GameTetris.Item()!,
+        ToolKind.GameMinesweeper.Item()!
     };
 }
