--- a/src/Dotnetools.Web/Shared/RecommendedToolsSideBar.razor
+++ b/src/Dotnetools.Web/Shared/RecommendedToolsSideBar.razor
@@ -24,7 +24,7 @@
 {
     readonly ToolItem[] _items =
     {
-        ToolKind.ToolJsonFormatter.ToolItem()!,
-        ToolKind.ToolRegexTester.ToolItem()!
+        ToolKind.ToolJsonFormatter.Item()!,
+        ToolKind.ToolRegexTester.Item()!
     };
 }
