add sidebar of game and tool;

--- a/src/Dotnet9.BlazorWeb/Shared/HeaderPartial.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/HeaderPartial.razor
@@ -7,10 +7,10 @@
             <a href="/albums" title="专辑">专辑</a>
         </span>
         <span class="header-menu">
-            <a href="/tools" title="工具箱">工具箱</a>
+            <a href="/tools" title="工具箱">在线工具</a>
         </span>
         <span class="header-menu">
-            <a href="/games" title="小游戏">小游戏</a>
+            <a href="/games" title="小游戏">在线游戏</a>
         </span>
         <span class="header-menu">
             <a href="/tags" title="标签云">标签云</a>
