--- a/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
@@ -12,6 +12,8 @@
     <div class="box_r">
         <SiteCountPartial/>
         <TopKeywordsSidebar/>
+        <RecommendedToolsSideBar/>
+        <RecommendedGamesSideBar/>
         @if (_recommendBlogs?.Any() == true)
         {
             <BlogSideBar Model="_recommendModel"/>
