--- a/src/Dotnetools.Web/Shared/RecommendedToolsSideBar.razor
+++ b/src/Dotnetools.Web/Shared/RecommendedToolsSideBar.razor
@@ -25,6 +25,7 @@
     readonly ToolItem[] _items =
     {
         ToolKind.ToolJsonFormatter.Item()!,
-        ToolKind.ToolRegexTester.Item()!
+        ToolKind.ToolRegexTester.Item()!,
+        ToolKind.ToolRgb.Item()!
     };
 }
