add js to csharp tool;

--- a/src/Dotnet9.BlazorWeb/Shared/ToolItemPageContent.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/ToolItemPageContent.razor
@@ -24,6 +24,9 @@
         case ToolKind.ToolTimestamp:
             <Timestamp/>
             break;
+        case ToolKind.Js2Charp:
+            <Js2Csharp />
+            break;
 
 
         case ToolKind.GameMinesweeper:
