--- a/src/Dotnetools.Web/Shared/ToolItemPageContent.razor
+++ b/src/Dotnetools.Web/Shared/ToolItemPageContent.razor
@@ -15,7 +15,7 @@
         <GuessingNumbers/>
         break;
     case ToolKind.ToolRegexTester:
-        <GuessingNumbers/>
+        <RegexTester/>
         break;
     case ToolKind.ToolRgb:
         <RGB/>
@@ -25,6 +25,9 @@
         break;
     case ToolKind.ToolTimestamp:
         <Timestamp/>
+        break;
+    case ToolKind.Js2Charp:
+        <Js2Csharp />
         break;
 
 
