--- a/src/Dotnet9.BlazorWeb/Pages/Tools/RgbPage.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/RgbPage.razor
@@ -9,7 +9,14 @@
     {
         if (!firstRender)
         {
-            await JsRuntime.InvokeVoidAsync("window.showNormalColors");
+            try
+            {
+                await JsRuntime.InvokeVoidAsync("window.showNormalColors");
+            }
+            catch (Exception ex)
+            {
+                Console.WriteLine(ex.Message);
+            }
         }
     }
 }
