--- a/src/Dotnetools.Share/Components/Tools/RGB.razor
+++ b/src/Dotnetools.Share/Components/Tools/RGB.razor
@@ -1,6 +1,4 @@
-﻿@using System.Text.RegularExpressions
-
-<!--参考源：https://sunpma.com/other/rgb/-->
+﻿<!--参考源：https://sunpma.com/other/rgb/-->
 
 <PageTitle>RGBA颜色值转换</PageTitle>
 <title>RGBA颜色值转换</title>
@@ -57,3 +55,9 @@
     <br>
     <hr class="hr-twill-colorful">
 </main>
+
+@code
+{
+   
+
+}
