--- a/src/Dotnetools.Share/_Imports.razor
+++ b/src/Dotnetools.Share/_Imports.razor
@@ -10,3 +10,6 @@
 @using Dotnetools.Share.Models.Games.Tetris.Tetrominos
 @using Microsoft.AspNetCore.Components.Routing
 @using Dotnetools.Share.Components.Partials
+@using Dotnetools.Share.Models
+@using Dotnetools.Share.Components.Games
+@using Dotnetools.Share.Components.Tools
