--- a/src/Dotnetools.Web/Shared/ToolItemPageContent.razor
+++ b/src/Dotnetools.Web/Shared/ToolItemPageContent.razor
@@ -2,48 +2,12 @@
 <MRow>
     <MCol Class="mt-2"
           Cols="12">
-            <strong style="padding-left: 10px;">@(Kind?.Item()?.Name)</strong>
+        <strong style="padding-left: 10px;">@(Kind?.Item()?.Name)</strong>
     </MCol>
 
 </MRow>
-@switch (Kind)
-{
-    case ToolKind.ToolCountDown:
-        <CountDown/>
-        break;
-    case ToolKind.ToolJsonFormatter:
-        <GuessingNumbers/>
-        break;
-    case ToolKind.ToolRegexTester:
-        <RegexTester/>
-        break;
-    case ToolKind.ToolRgb:
-        <RGB/>
-        break;
-    case ToolKind.ToolStringEncoder:
-        <StringEncoder/>
-        break;
-    case ToolKind.ToolTimestamp:
-        <Timestamp/>
-        break;
-    case ToolKind.Js2Charp:
-        <Js2Csharp />
-        break;
 
-
-    case ToolKind.GameMinesweeper:
-        <Minesweeper/>
-        break;
-    case ToolKind.GameTetris:
-        <Tetris/>
-        break;
-    case ToolKind.GameGuessingNumbers:
-        <GuessingNumbers/>
-        break;
-    case ToolKind.GameTictactoe:
-        <Tictactoe/>
-        break;
-}
+<ToolItemComponent Kind="@Kind"/>
 
 @code
 {
