--- a/src/Dotnetools.Share/Components/Tools/RGB.razor
+++ b/src/Dotnetools.Share/Components/Tools/RGB.razor
@@ -63,7 +63,7 @@
         <!--预览颜色-->
         <h2 class="mt-2">CSS颜色表</h2>
         <div class="tile mt-2">
-            HTML 和 CSS 颜色规范中定义的 147 中颜色名（17 种标准颜色加 130 种其他颜色）。下面的表格中列出了所有这些颜色，以及它们的十六进制值。
+            HTML 和 CSS 颜色规范中定义的 147 种颜色名（17 种标准颜色加 130 种其他颜色）。下面的表格中列出了所有这些颜色，以及它们的十六进制值。
             <br>
             17 种标准色是 aqua, black, blue, fuchsia, gray, green, lime, maroon, navy, olive, orange, purple, red,
             silver,
